라이브러리 버전 업 Java        21 Kotlin      2.1.20 Spring-Boot 3.5.4 actuator management 플러그인 추가 amazoncorretto:21-alpine 베이스 이미지 런타임 구성